--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.19"
 mime_guess = "2.0.4"
+pretty_env_logger = "0.5.0"
 rustls = "0.21.1"
 rustls-pemfile = "1.0.2"
