--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ mime_guess = "2.0.4"
 pretty_env_logger = "0.5.0"
 rustls = "0.21.1"
 rustls-pemfile = "1.0.2"
+
+[dev-dependencies]
+rand = "0.8.5"
